--- a/cssstyle.css
+++ b/cssstyle.css
@@ -6,7 +6,8 @@
 .containar{
     width: 100%;
     height: 100vh;
-    background-color: #ffffff;
+   /* background-color: #ffffff;*/
+    background-color:red;
     position: relative;
 }
 .navbar{
