--- a/cssstyle.css
+++ b/cssstyle.css
@@ -6,8 +6,8 @@
 .containar{
     width: 100%;
     height: 100vh;
-   /* background-color: #ffffff;*/
-    background-color:red;
+    background-color: #ffffff;
+   
     position: relative;
 }
 .navbar{
