--- a/cssstyle.css
+++ b/cssstyle.css
@@ -122,13 +122,28 @@ html{
 .abt-skill{
     font-size: 30px;
     margin-top: 20px;
-    margin-left: 8%;
-    color: #000000;
+    margin-left: 34%;
 }
 h11{
     text-align: center;
     margin-bottom: 30px;
     color: #008000;
+}
+.abt-skill h3{
+    letter-spacing: 3px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.bar{
+    width: 500px;
+    height: 3px;
+    background-color: #e6efef;
+    border-radius: 3px;
+}
+.bar div{
+    height: 3px;
+    border-radius: 3px;
+    background-color: green;
 }
 .abt-con{
     font-size: 30px;
